--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'German poetry -- 19th century'
 - !lcc 'PT'
+- GITenberg
 title: Das Lied vom blöden Ritter
 url: http://www.gutenberg.org/ebooks/39792
